controller/test/e2e/testdata/a2a/common.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2a-route
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  rules:
    - backendRefs:
        - name: a2a-helloworld
          port: 9999
